k8s/trace-2/renderine-deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: renderine
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 2
  template:
    metadata:
      labels:
        app: demo
        role: renderine
        version: 4.0.0
    spec:
      containers:
      - name: renderine
        image: jensneuse/k8s-demo:4.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          port: 80
