k8s/trace-2/database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: database
spec:
  type: ClusterIP
  selector:
    app: demo
    role: database
  ports:
  - port: 80
    name: http
