k8s/trace-2/renderine-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: renderine
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  tls:
  - hosts:
    - jensneuse.de
    secretName: istio-ingress-certs
  rules:
  - host: t-online.v2.jensneuse.de
    http:
      paths:
      - path:
        backend:
          serviceName: renderine
          servicePort: 80
